# gitlog_summary

./: .gitignore  README.md  pyproject.toml
gitlog_summary/: __init__.py  cli.py
